# Voice-typeless

./: .gitignore  CHANGELOG.md  Makefile  README.md  agents.md  knowledge_graph.md  launch.bat
core/: go.mod
core/audio/: audio.go  audio_test.go  recorder.go  vad.go
core/config/: config.go  defaults.go
core/engine/: device.go  engine.go  engine_test.go  sensevoice.go
core/history/: history.go  history_test.go  sqlite.go
core/hotkey/: combo.go  hotkey.go  hotkey_test.go
core/ipc/: protocol.go  server.go
core/paste/: guard.go  paste.go  paste_darwin.go  paste_other.go  paste_test.go  paste_windows.go
core/processor/: filler.go  language_mix.go  processor.go  processor_test.go
docs/: api.md  architecture.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  app.css  main.ts
frontend/src/lib/: i18n.svelte.ts
frontend/src/lib/components/: DevicePicker.svelte  FloatingIndicator.svelte  HistoryPanel.svelte  SettingsPage.svelte
frontend/src/lib/stores/: appState.svelte.ts
frontend/src/lib/tauri/: commands.ts  events.ts
models/: README.md
plugins/: README.md
scripts/: dev.ps1  env-msvc.ps1  setup.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
tests/: README.md
